--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "hello",
   "version": "0.1.0",
+  "homepage": "http://zonoise.github.io/react-calc",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.2",
